# a5-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: bench.yml  rust-ci.yml  test.yml
benches/: cap.rs  cell.rs  compact.rs  curve.rs  grid_disk.rs  hex.rs  hierarchy.rs  hilbert.rs  line.rs  polygon.rs  projections.rs
benches/common/: mod.rs
examples/wireframe/: README.md  main.rs
scripts/: compare_benchmarks.py
src/: lib.rs
src/coordinate_systems/: base.rs  coords.rs  lonlat.rs  mod.rs  polar.rs  spherical.rs  vec2.rs  vec3.rs
src/core/: cell.rs  cell_info.rs  compact.rs  constants.rs  coordinate_transforms.rs  dodecahedron_quaternions.rs  face_adjacency.rs  hex.rs  hilbert.rs  mod.rs  origin.rs  pentagon.rs  serialization.rs  tiling.rs  utils.rs
src/geometry/: mod.rs  pentagon.rs  prepared_polygon.rs  spherical_polygon.rs  spherical_triangle.rs
src/lattice/: anchor.rs  basis.rs  compat.rs  curve.rs  hilbert.rs  mod.rs  quaternary.rs  shift_digits.rs  triple.rs  types.rs
src/lattice/lsystem/: grammar.rs  mod.rs  tables.rs  turtle.rs
src/projections/: authalic.rs  crs.rs  dodecahedron.rs  equal_area.rs  gnomonic.rs  mod.rs  polyhedral.rs
src/regions/: mod.rs  polygon.rs
src/test/: coordinate_systems.rs  gnomonic.rs  mod.rs
src/traversal/: cap.rs  global_neighbors.rs  grid_disk.rs  lattice_boundary.rs  lattice_flood_fill.rs  lattice_neighbors.rs  line.rs  mod.rs  neighbors.rs  quintant_neighbors.rs
src/utils/: great_circle.rs  mod.rs  spiral.rs  vector.rs
tests/: authalic.rs  cell.rs  cell_info.rs  compact.rs  coordinate_transforms.rs  core_pentagon.rs  crs.rs  dodecahedron.rs  dodecahedron_quaternions.rs  equal_area.rs  geometry_spherical_polygon_primitives.rs  gnomonic.rs  hex.rs  hilbert.rs  lattice_compat.rs  lattice_curve.rs  lattice_hilbert.rs  lattice_lsystem.rs  lattice_quaternary.rs  lattice_shift_digits.rs  lattice_triple.rs  origin.rs  pentagon.rs  polyhedral.rs  regions_polygon.rs  serialization.rs  spherical_polygon.rs  spherical_triangle.rs  tiling.rs  traversal_cap.rs  traversal_global_neighbors.rs  traversal_grid_disk.rs  traversal_lattice_flood_fill.rs  traversal_lattice_neighbors.rs  traversal_line.rs  traversal_quintant_neighbors.rs  utils_great_circle.rs  utils_spiral.rs  vector.rs
tests/fixtures/: cell-to-lonlat.json  dodecahedron-test-data.json  equal-area.json  serialization.json  spherical-polygon.json  spherical-triangle.json  tiling.json
tests/fixtures/lattice/: compat.json  (+2 more)
tests/geometry/: mod.rs
(+11 files in other folders)
